# balance-service-nestjs

./: .env  .gitignore  Cargo.toml  jest.json  package-lock.json  package.json  pnpm-lock.yaml  test.sqlite  vercel.json  vercel.sh
.github/workflows/: nodejs.yaml
addons/: lib.rs
src/: app.module.ts  constants.ts  main.ts
src/auth/: auth.module.ts
src/auth/controllers/auth/: auth.controller.spec.ts  auth.controller.ts
src/auth/dto/: login-user.dto.ts  register-resp.dto.ts  sign-user.dto.ts  token.dto.ts
src/auth/guards/jwt/: jwt-auth.guard.ts
src/auth/services/auth/: auth.service.spec.ts  auth.service.ts
src/auth/strategies/jwt/: jwt.strategy.ts
src/auth/strategies/local/: local.strategy.ts
src/dto/: error.dto.ts
src/providers/: database.provider.ts
src/transactions/: transactions.module.ts
src/transactions/controllers/transactions/: transactions.controller.spec.ts  transactions.controller.ts
src/transactions/dto/: create-transaction.dto.ts
src/transactions/entities/: transaction.entity.ts
src/transactions/hooks/: transactions.hooks.ts
src/transactions/repository/: transactions.repository.ts
src/transactions/services/transactions/: transactions.service.spec.ts  transactions.service.ts
src/transactions/types/: transactionType.d.ts
src/users/: users.module.ts
src/users/dto/: create-user.dto.ts
src/users/entities/: user.entity.ts
src/users/repository/: users.repository.ts
src/users/services/users/: users.service.spec.ts  users.service.ts
src/utils/: get-error.ts  mem-db.ts  transaction-desc.ts
types/: fastify.d.ts
